force-app/main/default/objects/Potion_Order__c/Potion_Order__c.object-meta.xml
<CustomObject>
    <label>Potion Order</label>
    <nameField>
        <displayFormat>POI-{0000}</displayFormat>
        <label>Potion Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potion Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>