force-app/main/default/objects/Potion_Order__c/fields/Account_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>Account_Purchasing__c</fullName>
    <label>Account Purchasing</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Potion Orders</relationshipLabel>
    <relationshipName>Potion_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>