force-app/main/default/objects/Potion_Order__c/fields/Delivery_Truck_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Truck_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Truck ID</label>
    <referenceTo>Delivery_Truck__c</referenceTo>
    <relationshipLabel>Potion Orders</relationshipLabel>
    <relationshipName>Potion_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>