force-app/main/default/objects/Potion_Order__c/fields/Number_of_Potions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Potions__c</fullName>
    <label>Number of Potions</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>