force-app/main/default/objects/Potion_Order__c/fields/Order_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Price__c</fullName>
    <formula>Number_of_Potions__c  *  Potion_Type__r.Total_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>