force-app/main/default/objects/Potion_Order__c/fields/Ordered_By__c.field-meta.xml
<CustomField>
    <fullName>Ordered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordered By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Potion_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>