force-app/main/default/objects/Potion_Order__c/fields/Potion_Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Potion_Order_Name__c</fullName>
    <description>Field to use in SOQL Queries in APEX. Not meant to be used or seen by users.</description>
    <label>Potion Order Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>