force-app/main/default/objects/Potion_Order__c/fields/Potion_Type__c.field-meta.xml
<CustomField>
    <fullName>Potion_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Potion Type</label>
    <referenceTo>Potion__c</referenceTo>
    <relationshipLabel>Potion Orders</relationshipLabel>
    <relationshipName>Potion_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>