force-app/main/default/objects/Potion_Order__c/validationRules/Positive_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Number</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX( TEXT(Number_of_Potions__c) , &apos;[1-9]\\d{0,6}&apos;)</errorConditionFormula>
    <errorDisplayField>Number_of_Potions__c</errorDisplayField>
    <errorMessage>Please enter positive integer between 1 and 9999999</errorMessage>
</ValidationRule>