force-app/main/default/objects/Potion_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Delivery_Truck_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>