force-app/main/default/objects/Potion_Order__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Delivery_Truck_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Number_of_Potions__c</columns>
    <columns>Potion_Type__c</columns>
    <columns>Account_Purchasing__c</columns>
    <columns>Order_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>